# click-auto-help

./: pyproject.toml  setup.py  url.sh
click_auto_help/: __init__.py  click_auto_help.py
