[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "click_auto_help"
version = "0.0.1760909851"
description = "Click mixin to print full --help when a incorrect command is used"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "click",
]
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/click-auto-help"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
click_auto_help = [
    "py.typed",
]
